# pinot-client-rust

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
db/score_sheet/: data.csv  data.json  job_spec.yaml  offline_table.json  schema.json
examples/: batch-quickstart.rs  deserialize-to-data-row.rs  deserialize-to-struct.rs  pql-query.rs  sql-query-deserialize-to-data-row.rs  sql-query-deserialize-to-struct.rs
scripts/test/pinot/: helpers.py  populate-db.sh  wait-for-broker.py  wait-for-controller.py  wait-for-zookeeper.py
src/: async_client_transport.rs  async_connection.rs  broker_selector.rs  client_transport.rs  connection.rs  dynamic_broker_selector.rs  errors.rs  external_view.rs  json_async_http_client_transport.rs  json_http_client_transport.rs  lib.rs  rand.rs  request.rs  response.rs  simple_broker_selector.rs  zookeeper.rs
src/response/: data.rs  deserialise.rs  mod.rs  pql.rs  raw.rs  sql.rs
