[package]
name = "pinot-client-rust"
description = "A rust library to query Apache Pinot."
version = "0.1.7"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/yougov/pinot-client-rust"
repository = "https://github.com/yougov/pinot-client-rust"
license = "MIT"

[features]
async = []

[dependencies]
async-trait = "~0.1"
bimap = { version = "~0.6", features = ["serde"] }
chrono = { version = "~0.4", features = ["serde"] }
log = "~0.4"
hex = "~0.4"
http = "~0.2"
num = "~0.4"
rand = "~0.8"
reqwest = { version = "~0.11", features = ["json", "blocking"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
thiserror = "~1.0"
zookeeper = "~0.6"

[dev-dependencies]
uuid = { version = "~0.8", features = ["v4"] }
tokio = { version = "~1.18", features = ["macros"] }
